cicd_tools/nexus/nexus-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nexus-docker
  namespace: cicd
  labels:
    app: nexus
spec:
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: nexus
