cicd_tools/nexus/registry-route.yml
---
kind: Template
apiVersion: v1
metadata:
  name: registry-route
objects:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: nexus3
    name: nexus3-docker
  spec:
    ports:
    - name: 5000-tcp
      port: 5000
      protocol: TCP
      targetPort: 5000
    selector:
      app: nexus3
    sessionAffinity: None
    type: ClusterIP

- apiVersion: v1
  kind: Route
  metadata:
    annotations:
    labels:
      app: nexus3
    name: nexus3-docker
  spec:
    tls:
      termination: edge
    port:
      targetPort: 5000-tcp
    to:
      kind: Service
      name: nexus3-docker
      weight: 100
